# servidor-rag-libros

./: .gitignore  Guía de Instalación.docx  bd_config.py  documentacion.docx  explorar_bd.py  ingerir.py  pyproject.toml  server.py
